[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Yasin Raies <yasin.raies@stud-mail.uni-wuerzburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
pest = "2.1.3"
pest_derive = "2.1.0"